@@ -69,7 +69,7 @@ namespace IceInternal
 namespace Ice
 {
 
-typedef char Byte;
+typedef unsigned char Byte;
 typedef short Short;
 typedef int Int;
 typedef IceUtil::Int64 Long;
