@@ -1,6 +1,13 @@
 Changes since version 1.1.0
 ---------------------------
 
+- Changed the mapping of the Slice byte type: ::Ice::Byte is now a typedef
+  for unsigned char. (Previously, ::Ice::Byte was a typedef to char.) This
+  change guarantees that byte values are always in the range 0..255 (instead
+  of either -128..127 or 0..255, depending on the CPU architecture). This
+  change also permits function overloading for ::Ice::Byte and char (which
+  can be useful if you use both strings and byte sequences).
+
 Changes since version 1.0.1
 ---------------------------
 
